--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.0.0-rc.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "antd": "^4.19.5",
     "gh-pages": "^3.2.3",
     "i18next": "^21.6.16",
@@ -49,7 +52,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "source-map-loader": "^5.0.0",
+    "tailwindcss": "^3.0.24",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack-cli": "^5.1.4"
   },
   "homepage": "https://rickyricer.github.io/reactPortfolio/"
 }
